# AEDS

./: README.md  pyproject.toml
scripts/mac/: setup_environment.py
src/: app.py
src/encryption/: decrypt.py  encrypt.py  router.py  utilities.py
src/server/: router.py  server.py
src/server/templates/: login.html
tests/encryption/: encryption.py
